--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Happy Valentine :)</title>
+    <title>Happy Valentine❤️</title>
     <link
       rel="stylesheet"
     />
@@ -16,10 +16,10 @@
     <div class="container">
       <div class="one">
         <h1 class="one">
-          Hey
-          <span id="name">xyz</span>
+          Hi
+          <span id="name">Bae</span>
         </h1>
-        <p class="two" id="greetingText">I really like your name btw!</p>
+        <p class="two" id="greetingText">Mình thực sự rất thích tên của cậu! Rất đẹp và ý nghĩa.🥰</p>
       </div>
       <div class="three">
         <p>It's Valentine!!! :D</p>
@@ -27,20 +27,20 @@
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            Happy Valentine's Day!! Yeee! Love and blah blah...
+            Happy Valentine's Day!! Chúc cậu luôn hạnh phúc và vui vẻ nha!!🌹🌷
           </p>
           <p class="fake-btn">Send</p>
         </div>
       </div>
       <div class="five">
-        <p class="idea-1">That's what I was going to do.</p>
-        <p class="idea-2">But then I stopped.</p>
+        <p class="idea-1">Mình muốn làm điều gì đó.</p>
+        <p class="idea-2">Nhưng tớ đã dừng lại.🥹</p>
         <p class="idea-3">
-          I realised, I wanted to do something <strong>special</strong>.
+          Toàn nhận ra, Toàn phải làm điều gì đó <strong>thật đặc biệt!</strong>.
         </p>
-        <p class="idea-4">Because,</p>
+        <p class="idea-4">Vì,</p>
         <p class="idea-5">
-          You are Special
+          Cậu là người đặc biệt
           <span>:)</span>
         </p>
         <p class="idea-6">
@@ -124,8 +124,8 @@
         </svg>
       </div>
       <div class="nine">
-        <p>Okay, now come back and tell me if you liked it.</p>
-        <p id="replay">Or click, if you want to watch it again.</p>
+        <p>Mong những gì tớ bày tỏ có thể đổi lấy nụ cười của cậu. Dù ra sao, Toàn luôn dõi theo cậu. ❤️ 3000</p>
+        <p id="replay">Ấn vào đây để xem lại tình cảm của tớ.</p>
         <p class="last-smile">:)</p>
       </div>
     </div>
