--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
       <div class="five">
         <p class="idea-1">Mình muốn làm điều gì đó.</p>
-        <p class="idea-2">Nhưng tớ đã dừng lại.🥹</p>
+        <p class="idea-2">Đôi khi mình muốn bỏ cuộc.🥹</p>
         <p class="idea-3">
           Toàn nhận ra, Toàn phải làm điều gì đó <strong>thật đặc biệt!</strong>.
         </p>
