--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="container">
       <div class="one">
         <h1 class="one">
-          Hi
-          <span id="name">Bae</span>
+          Hii
+          <span id="name">Baee!</span>
         </h1>
         <p class="two" id="greetingText">Mình thực sự rất thích tên của cậu! Rất đẹp và ý nghĩa.🥰</p>
       </div>
