--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <div class="container">
       <div class="one">
         <h1 class="one">
-          Hii
-          <span id="name">Baee!</span>
+          Hi Bae!
         </h1>
         <p class="two" id="greetingText">Mình thực sự rất thích tên của cậu! Rất đẹp và ý nghĩa.🥰</p>
       </div>
