--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         <h1 class="one">
           Hi Bae!
         </h1>
-        <p class="two" id="greetingText">Mình thực sự rất thích tên của cậu! Rất đẹp và ý nghĩa.🥰</p>
+        <p class="two" id="greetingText">Mình thực sự rất thích cậu. Cậu rất cuteee!🥰</p>
       </div>
       <div class="three">
-        <p>It's Valentine!!! :D</p>
+        <p>It's Valentine!!!❤️</p>
       </div>
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            Happy Valentine's Day!! Chúc cậu luôn hạnh phúc và vui vẻ nha!!🌹🌷
+            Happy Valentine's Day!! Chúc cậu luôn hạnh phúc!🌹🌷
           </p>
           <p class="fake-btn">Send</p>
         </div>
