--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <img src="img/3000.png" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
           <h3 class="wish-hbd">Happy Valentine's Day Gorgeous</h3>
-          <h5 id="wishText">kuch kuch</h5>
+          <h5 id="wishText">Bắn tim 🫰💕</h5>
         </div>
       </div>
       <div class="seven">
