--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
 
   <body>
+    background-color: pink;
     <div class="container">
       <div class="one">
         <h1 class="one">
