--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="six">
         <img src="img/3000.png" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">Happy Valentine's Day Gorgeous</h3>
+          <h3 class="wish-hbd">Happy Valentine's Day!</h3>
           <h5 id="wishText">Bắn tim 🫰💕</h5>
         </div>
       </div>
